--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <!-- <h1 class="mx-auto my-0 text-uppercase">Joe Clark</h1> -->
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Android &nbsp;&nbsp; Java &nbsp;&nbsp; Design &nbsp;&nbsp; Build</h2>
+        <!-- <h2 class="text-white-50 mx-auto mt-2 mb-5">Android &nbsp;&nbsp; Java &nbsp;&nbsp; Design &nbsp;&nbsp; Build</h2> -->
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Software Engineer currently designing and developing Android applications.</h2>
         <a href="https://github.com/jclark118" class="btn btn-primary js-scroll-trigger">Github</a>
       </div>
     </div>
