updates to background, wording, and some android screenshots

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Software Engineer</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">My Work</a>
           </li>
         </ul>
       </div>
@@ -49,7 +49,7 @@
       <div class="mx-auto text-center">
         <!-- <h1 class="mx-auto my-0 text-uppercase">Joe Clark</h1> -->
         <!-- <h2 class="text-white-50 mx-auto mt-2 mb-5">Android &nbsp;&nbsp; Java &nbsp;&nbsp; Design &nbsp;&nbsp; Build</h2> -->
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Software Engineer currently designing and developing Android applications.</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Multi disciplined Software Engineer currently designing and developing Android and JavaScript applications.</h2>
         <a href="https://github.com/jclark118" class="btn btn-primary js-scroll-trigger">Github</a>
       </div>
     </div>
@@ -62,12 +62,12 @@
       <!-- Android Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/android.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/mdpi/phones.png" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Android Dev</h4>
-            <p class="text-black-50 mb-0">My latest work has been designing and developing android applications.</p>
+            <p class="text-black-50 mb-0">My latest work has been designing and developing android applications using the GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
           </div>
         </div>
       </div>
@@ -81,8 +81,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Java</h4>
-                <p class="mb-0 text-white-50">Most experienced in Java, and have learned to use others along the way: Node, Kotlin, PHP, whatever comes up.  Since 2008</p>
+                <h4 class="text-white">Tech</h4>
+                <p class="mb-0 text-white-50">Most experienced in Java, and have learned to use others along the way: JavaScript, Node, Electron, Kotlin, PHP, whatever comes up.  Since 2008</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -100,7 +100,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Design</h4>
-                <p class="mb-0 text-white-50">UI Design is a skill I've been developing for a couple years, studying other designers and using Sketch to create my own work.</p>
+                <p class="mb-0 text-white-50">UI Design is a skill I've been developing for a couple years, studying other designers and using Sketch to create some of my own original work.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -118,14 +118,14 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Build</h4>
-                <p class="mb-0 text-white-50">A well rounded engineer not only designing and coding, but building complete products with Devops tools like Jenkins, Pivotal Cloud Foundry, Git, Nexus, etc.</p>
+                <p class="mb-0 text-white-50">A well rounded engineer not only designing and coding, but building complete products with Devops tools like Jenkins, Pivotal Cloud Foundry, Git, Nexus, Fortify, etc.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
         </div>
       </div>
-📷 @euwars, @maximilianweisbecker, @halgatewood, @carlheyerdahl, @francesco_ungaro
+📷 @euwars, @maximilianweisbecker, @halgatewood, @carlheyerdahl
     </div>
   </section>
 
