--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">My Work</a>
+            <a class="nav-link js-scroll-trigger" href="https://github.com/jclark118">Github</a>
           </li>
         </ul>
       </div>
@@ -50,15 +50,15 @@
         <!-- <h1 class="mx-auto my-0 text-uppercase">Joe Clark</h1> -->
         <!-- <h2 class="text-white-50 mx-auto mt-2 mb-5">Android &nbsp;&nbsp; Java &nbsp;&nbsp; Design &nbsp;&nbsp; Build</h2> -->
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Multi disciplined Software Engineer currently designing and developing Android and JavaScript applications.</h2>
-        <a href="https://github.com/jclark118" class="btn btn-primary js-scroll-trigger">Github</a>
+        <a href="#projects" class="btn gradient-button js-scroll-trigger">My work</a>
       </div>
     </div>
   </header>
 
-  <!-- Projects Section -->
+
+<!-- Android section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
-
       <!-- Android Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
@@ -66,23 +66,75 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Android Dev</h4>
-            <p class="text-black-50 mb-0">My latest work has been designing and developing android applications using the GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
+            <h2>Android Dev</h2>
+            <p class="text-black-50 mb-0">My latest work has been designing and developing Android applications using the OGC GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
+            <div class="padded-offset-link">
+              <a href="https://github.com/ngageoint/geopackage-mapcache-android" target="_blank" class="text-sub-link">Check out MapCache for Android<a>
+            </div>
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- Java Row -->
+
+
+
+  <!-- Designs -->
+  <section id="projects" class="projects-section bg-light">
+    <div class="container">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h2>Design</h2>
+            <p class="text-black-50 mb-0">UI Design is a skill I've been developing for a couple years, studying other designers and using Sketch to create some of my own original work.  I've also been exploring how small animations and haptic feedback can enhance the user experience.</p>
+            <div class="padded-offset-link">
+              <a href="img/large/tarmacDesignLightBg.png" target="_blank" class="text-sub-link">View full resolution</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-8 col-lg-7">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/tarmacDesignBrightColor.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+  <!-- Projects Section -->
+  <section id="projects" class="projects-section bg-light">
+    <div class="container">
+
+      <!-- Android Row -->
+      <!-- <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-8 col-lg-7">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/mdpi/phones.png" alt="">
+        </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>Android Dev</h4>
+            <p class="text-black-50 mb-0">My latest work has been designing and developing Android applications using the GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
+          </div>
+        </div>
+      </div> -->
+
+      <!-- Tech Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/java.jpg" alt="">
+          <img class="img-fluid" src="img/mdpi/logoGroup.png" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Tech</h4>
-                <p class="mb-0 text-white-50">Most experienced in Java, and have learned to use others along the way: JavaScript, Node, Electron, Kotlin, PHP, whatever comes up.  Since 2008</p>
+                <p class="mb-0 text-white-50">Most experienced in Java, and have learned to use others along the way: Android, JavaScript, Node, Mongo, Electron, Kotlin, PHP, whatever comes up.  Since 2008.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -90,8 +142,28 @@
         </div>
       </div>
 
-      <!-- Design Row -->
+      <!-- Build Row Left justified -->
       <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/build.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Build</h4>
+                <p class="mb-0 text-white-50">A well rounded engineer not only designing and coding, but building complete products with Devops tools like Jenkins, Pivotal Cloud Foundry, Git, Nexus, Fortify, etc.</p><p class="mb-0 text-white-50">  Security+ certified ✅</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <!-- Design Row -->
+      <!-- <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/design.jpg" alt="">
         </div>
@@ -106,10 +178,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Build Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/build.jpg" alt="">
         </div>
@@ -124,7 +196,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 📷 @euwars, @maximilianweisbecker, @halgatewood, @carlheyerdahl
     </div>
   </section>
