photo credit fix

--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
           </div>
         </div>
       </div> -->
-📷 @euwars, @maximilianweisbecker, @halgatewood, @carlheyerdahl
+      <div align="right">
+        📷 @carlheyerdahl
+      </div>
     </div>
   </section>
 
