--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="mx-auto text-center">
         <!-- <h1 class="mx-auto my-0 text-uppercase">Joe Clark</h1> -->
         <!-- <h2 class="text-white-50 mx-auto mt-2 mb-5">Android &nbsp;&nbsp; Java &nbsp;&nbsp; Design &nbsp;&nbsp; Build</h2> -->
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Multi disciplined Software Engineer currently designing and developing Android and JavaScript applications.</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Multi-disciplined Software Engineer currently designing and developing Android and JavaScript applications.</h2>
         <a href="#projects" class="btn gradient-button js-scroll-trigger">My work</a>
       </div>
     </div>
