add github logo and sample threejs page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://github.com/jclark118">Github</a>
+            <div class="align-box">
+              <img style="width:12px;" src="img/github.png">
+              <!-- <span>Github</span> -->
+              <a class="nav-link js-scroll-trigger" href="https://github.com/jclark118">Github</a>
+            </div>
+            <!-- <a class="nav-link js-scroll-trigger" href="https://github.com/jclark118"><img src="img/githubWhite.png" style="width:12px;"> Github</a> -->
           </li>
         </ul>
       </div>
