--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h2>Android Dev</h2>
-            <p class="text-black-50 mb-0">My latest work has been designing and developing Android applications using the OGC GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
+            <p class="text-black-50 mb-0">Some of my latest work has been designing and developing Android applications using the OGC GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
             <div class="padded-offset-link">
               <a href="https://github.com/ngageoint/geopackage-mapcache-android" target="_blank" class="text-sub-link">Check out MapCache for Android<a>
             </div>
