--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
 <!-- Android section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
+      <!-- Recent Developments Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h2>Recent Devlopment Efforts</h2>
+            <p class="text-black-50 mb-0">Most recently, my current development efforts include mostly frontend development with Svelte, Tailwind, and REST APIs</p>
+            <p class="text-black-50 mb-0">I've also spent time upgrading MapCache Desktop, an Electron / VueJS application built to run on MacOS, Windows, and Linux.</p>
+          </div>
+        </div>
+      </div>
+      
       <!-- Android Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
