--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
       <!-- Recent Developments Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-4 col-lg-5">
+        <div class="col-12">
           <div class="featured-text text-center text-lg-left">
             <h2>Recent Devlopment Efforts</h2>
             <p class="text-black-50 mb-0">Most recently, my current development efforts include mostly frontend development with Svelte, Tailwind, and REST APIs</p>
