--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </header>
 
 
-<!-- Android section -->
+<!-- Recent/Android section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
       <!-- Recent Developments Row -->
@@ -69,8 +69,8 @@
         <div class="col-12">
           <div class="featured-text text-center text-lg-left">
             <h2>Recent Devlopment Efforts</h2>
-            <p class="text-black-50 mb-0">Most recently, my current development efforts include mostly frontend development with Svelte, Tailwind, and REST APIs</p>
-            <p class="text-black-50 mb-0">I've also spent time upgrading MapCache Desktop, an Electron / VueJS application built to run on MacOS, Windows, and Linux.</p>
+            <p class="text-black-50 mb-0">My current daily development efforts include mostly frontend development with Svelte, TypeScript, Tailwind, and REST APIs.  I'm responsible for planning out requirement implementations, ui/ux design, feature development, and integration.  While some of my work is public and open source, this effort is not.</p>
+            <p class="text-black-50 mb-0">I've also recently spent time upgrading <a href="https://github.com/ngageoint/geopackage-mapcache-electron" target="_blank" class="text-sub-link">MapCache Desktop</a>, an Electron / VueJS application built to run on MacOS, Windows, and Linux.  I was tasked with updating the framework to the latest versions of NodeJs, VueJS, Electron, and all supporting libraries.  This involved updating both the frontend components and backend implementations to handle the latest changes, along with reworking the build scripts to deliver the product on all three supported plaforms.</p>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
             <h2>Android Dev</h2>
             <p class="text-black-50 mb-0">Some of my latest work has been designing and developing Android applications using the OGC GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
             <div class="padded-offset-link">
-              <a href="https://github.com/ngageoint/geopackage-mapcache-android" target="_blank" class="text-sub-link">Check out MapCache for Android<a>
+              <a href="https://github.com/ngageoint/geopackage-mapcache-android" target="_blank" class="text-sub-link">Check out MapCache for Android</a>
             </div>
           </div>
         </div>
