--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </header>
 
 
-<!-- Recent/Android section -->
+<!-- Recent/Mobile section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
       <!-- Recent Developments Row -->
@@ -75,15 +75,15 @@
         </div>
       </div>
       
-      <!-- Android Row -->
+      <!-- Mobile Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0" src="img/mdpi/phonesMap.png" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h2>Android Dev</h2>
-            <p class="text-black-50 mb-0">Some of my latest work has been designing and developing Android applications using the OGC GeoPackage spec to manipulate feature and tile layers with the Google Maps api.</p>
+            <h2>Mobile Dev</h2>
+            <p class="text-black-50 mb-0">I spent a fair amount of time designing and developing Android and iOS applications.  One example was a complete redesign of MapCache android, which uses the OGC GeoPackage spec to manipulate feature and tile layers to display them on a map.</p>
             <div class="padded-offset-link">
               <a href="https://github.com/ngageoint/geopackage-mapcache-android" target="_blank" class="text-sub-link">Check out MapCache for Android</a>
             </div>
